--- a/Copy_of_Contest_DL_2025 (1).ipynb
+++ b/Copy_of_Contest_DL_2025 (1).ipynb
@@ -122,6 +122,10 @@
         "\n",
         "# Shuffle the dataset for randomness and create our smaller splits\n",
         "shuffled_dataset = full_dataset.shuffle(seed=42)\n",
+        "\n",
+        "# train_dataset = shuffled_dataset.select(range(0, 5000))\n",
+        "# train_dataset = shuffled_dataset.select(range(5000, 30000))\n",
+        "# train_dataset = shuffled_dataset.select(range(30000, 40000))\n",
         "train_dataset = shuffled_dataset.select(range(40000, 60000))      # Use the first 5,000 for training\n",
         "validation_dataset = shuffled_dataset.select(range(60000, 65000)) # Use the next 500 for validation"
       ]
@@ -292,7 +296,7 @@
         "    target_modules = [\"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\",\n",
         "                      \"gate_proj\", \"up_proj\", \"down_proj\"],\n",
         "    lora_alpha = 16, # A common practice is to set alpha = 2 * r\n",
-        "    lora_dropout = 0,\n",
+        "    lora_dropout = 0.05,\n",
         "    bias = \"none\",\n",
         "    use_gradient_checkpointing = \"unsloth\",\n",
         "    random_state = 42,\n",
@@ -388,7 +392,7 @@
         "id": "H11O96UNYl-X"
       },
       "source": [
-        "## **Step 4 Extra: Grid Training\\!**"
+        "## **Step 4 Extra: Grid Search\\!**"
       ]
     },
     {
